--- a/Contact.html
+++ b/Contact.html
@@ -69,7 +69,7 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn text-light bg-warning me-2" type="submit">Search</button>
                     <button class="btn  text-light bg-danger me-2">Login</button>
-                    <button class="btn text-light bg-success me-2 ">SignUp</button>
+                    <button class="btn text-light bg-success me-2 "><a href="signup.html" class="text-white">SignUp</a></button>
                 </form>
             </div>
         </div>
