--- a/Contact.html
+++ b/Contact.html
@@ -68,8 +68,8 @@
                 <form class="d-flex me-auto" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn text-light bg-warning me-2" type="submit">Search</button>
-                    <button class="btn  text-light bg-danger me-2">Login</button>
-                    <button class="btn text-light bg-success me-2 "><a href="signup.html" class="text-white">SignUp</a></button>
+                    <button class="btn  text-light bg-danger me-2"><a href="singnin.html" class="text-white ">Login</button></a>
+                    <button class="btn text-light bg-success me-2 "><a href="signup.html" class="text-white">SignUp</button></a>
                 </form>
             </div>
         </div>
